syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

service NodeExecutionProtoService {
  rpc accumulateResponses(AccumulateResponsesRequest) returns (AccumulateResponsesResponse);
}

message AccumulateResponsesRequest {
  string planExecutionId = 1;
  string notifyId = 2;
}

message AccumulateResponsesResponse {
  map<string, bytes> response = 1;
}
